# npm-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml  generate_test_output_for_npm_versions.sh  install_nvm.sh  release.sh  run_cargo_test_for_npm_versions.sh
src/: audit.rs  lib.rs  outdated.rs
