[package]
name = "npm-parser"
description = "Parses the JSON output of npm outdated and npm audit"
readme = "README.md"
license = "MIT OR Apache-2.0"
version = "0.2.3"
authors = ["Matthias Hörmann <mhoermann@gmail.com>"]
edition = "2021"
repository = "https://github.com/taladar/npm-parser"
categories = [ "parser-implementations" ]
keywords = [ "npm", "npm-outdated", "npm-audit", "javascript", "nodejs" ]

exclude = [ ".env", "tarpaulin-report.html", "tarpaulin-report.json" ]

[profile.release]
# do not strip debug info from release builds, useful for debugging those, cargo-flamegraph profiling or similar use cases
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.thiserror]
version = "~1.0"

[dependencies.futures]
version = "~0.3"

[dependencies.tracing]
version = "~0.1"

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[dependencies.serde_json]
version = "~1.0"

[dependencies.serde_path_to_error]
version = "~0.1"

[dependencies.versions]
version = "~4.0"

[dependencies.time]
version = "~0.3"
features = [ "serde", "serde-human-readable" ]

[dev-dependencies.tracing-test]
version = "~0.2"
